--- a/source/_posts/什么是量子计算机.md
+++ b/source/_posts/什么是量子计算机.md
@@ -4,6 +4,7 @@ date: 2021-05-01 13:32:08
 tags: 计算机理论
 categories: 量子计算机
 ---
+本文是对[什么是量子计算机？做一台量子计算机有哪些困难？](https://www.youtube.com/watch?v=OJEoWNZKcfs)视频的学习总结。
 
 ## 一、量子计算机理论提出的背景
 经典计算机遵循着摩尔定律，即在导体芯片单位面积上集成的晶体管和电阻每18个月会翻一番。
